2017-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81654
	* gcc.target/i386/pr81654.c: New test.

2017-08-01  Thomas König  <tkoenig@gcc.gnu.org>

	PR fortran/79312
	* gfortran.dg/logical_assignment_1.f90:  New test.

2017-08-01  Martin Liska  <mliska@suse.cz>

	PR middle-end/70140
	* gcc.dg/string-opt-1.c: Adjust test-case to scan for memcpy.

2017-08-01  Martin Liska  <mliska@suse.cz>

	Revert r250771
	Make mempcpy more optimal (PR middle-end/70140).

2017-08-01  Jakub Jelinek  <jakub@redhat.com>

	PR target/81622
	* gcc.target/powerpc/pr81622.c: New test.

2017-08-01  Steve Ellcey  <sellcey@cavium.com>

	PR tree-optimization/80925
	* gcc.dg/vect/vect-28.c: Add
	--param vect-max-peeling-for-alignment=0 option.
	Remove unaligned access and peeling checks.
	* gcc.dg/vect/vect-33-big-array.c: Ditto.
	* gcc.dg/vect/vect-70.c: Ditto.
	* gcc.dg/vect/vect-87.c: Ditto.
	* gcc.dg/vect/vect-88.c: Ditto.
	* gcc.dg/vect/vect-91.c: Ditto.
	* gcc.dg/vect/vect-93.c: Ditto.

2017-08-01  Tom de Vries  <tom@codesourcery.com>

	* gcc.target/nvptx/slp-2.c (foo): Use signed loop iteration variable.
	* gcc.target/nvptx/slp.c (foo): Same.

2017-08-01  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81181
	* gcc.dg/torture/pr81181.c: New testcase.

2017-08-01  Martin Liska  <mliska@suse.cz>

	PR middle-end/70140
	* gcc.dg/string-opt-1.c: Adjust test-case to scan for memcpy.

2017-08-01  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81641
	* gcc.target/i386/pr81641.c: New test.

2017-08-01  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81639
	* gcc.target/i386/pr81639.c: New test.

2017-08-01  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/ssa-dce-3.c: Adjust.
	* gcc.dg/tree-ssa/split-path-5.c: Remove case with just dead
	endless loop.
	* gcc.dg/uninit-23.c: Adjust.

2017-08-01  Bin Cheng  <bin.cheng@arm.com>

	* gcc.dg/no-strict-overflow-7.c: Revise comment and test string.
	* gcc.dg/tree-ssa/pr81388-1.c: Ditto.

2017-08-01  Bin Cheng  <bin.cheng@arm.com>
